--- a/.github/workflows/autobuild.yml
+++ b/.github/workflows/autobuild.yml
@@ -32,7 +32,7 @@ jobs:
             mingw-w64-x86_64-meson
             mingw-w64-x86_64-autotools
             mingw-w64-x86_64-gcc
-
+            mingw-w64-x86_64-libyaml
 
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -65,13 +65,13 @@ jobs:
           mkdir build/artifact
           cd build/artifact
           cp /mingw64/bin/zlib1.dll .
-          cp ../../windows/build-mingw64/bin/x64-msvcrt-ruby310.dll .
-          cp -r ../../windows/build-mingw64/lib/ruby/3.1.0 .
+          cp ../../windows/build-mingw64/bin/x64-msvcrt-ruby320.dll .
+          cp -r ../../windows/build-mingw64/lib/ruby/3.2.0 .
           cp ../../vendor/ANGLE/libEGL.dll .
           cp ../../vendor/ANGLE/libGLESv2.dll .
           cp ../../vendor/ANGLE/vulkan-1.dll .
           cp ../../vendor/ANGLE/COPYING ./COPYING_ANGLE
-          mv ./3.1.0 ./stdlib
+          mv ./3.2.0 ./stdlib
           cp ../mkxp-z.exe .
           cp ../../mkxp.json .
           cp -r ../../scripts .
@@ -126,8 +126,8 @@ jobs:
       - name: Prepare archive
         run: |
           cd build/local
-          cp -r ../../linux/build-x86_64/lib/ruby/3.1.0 .
-          mv ./3.1.0 ./stdlib
+          cp -r ../../linux/build-x86_64/lib/ruby/3.2.0 .
+          mv ./3.2.0 ./stdlib
           cp ../../mkxp.json .
           cp -r ../../scripts .
           cp ../../vendor/ANGLE/libGLESv2.so ./lib64
