Revert "enable rubygems"
This reverts commit 58967c571ee7ac4eab0af5744e8da2fdc37f05fd.

--- a/linux/Makefile
+++ b/linux/Makefile
@@ -38,7 +38,7 @@ RUBY_CONFIGURE_ARGS := \
 	--disable-install-doc \
 	--with-out-ext=openssl,readline,dbm,gdbm,pty,syslog \
 	--with-static-linked-ext \
-	--enable-rubygems \
+	--disable-rubygems \
 	--without-gmp
 
 CONFIGURE := $(CONFIGURE_ENV) ./configure $(CONFIGURE_ARGS)
