Revert "Use ANGLE on Windows"
This reverts commit 97336d1e4dd1aa6ef89683d09e8ff8204fb328fa.

--- a/meson.build
+++ b/meson.build
@@ -120,7 +120,7 @@ subdir('binding')
 subdir('shader')
 subdir('assets')
 
-global_include_dirs += include_directories('src', 'binding', 'vendor/ANGLE')
+global_include_dirs += include_directories('src', 'binding')
 
 rpath = ''
 
