--- a/meson_options.txt
+++ b/meson_options.txt
@@ -20,4 +20,4 @@ option('steamworks_path', type: 'string', value: '', description: 'Path to Steam
 option('steam_appid', type: 'string', value: '', description: 'Steam AppID. Set this to use SteamAPI_RestartAppIfNecessary')
 option('steamshim_debug', type: 'boolean', value: false, description: 'Whether to show Steamshim debug messages in the console')
 
-option('gfx_backend', type: 'combo', value: 'gles', choices: ['gl', 'gles'], description: 'Graphics rendering API to use.')
+option('gfx_backend', type: 'combo', value: 'gl', choices: ['gl', 'gles'], description: 'Graphics rendering API to use.')
