--- a/.github/workflows/autobuild.yml
+++ b/.github/workflows/autobuild.yml
@@ -30,6 +30,7 @@ jobs:
             mingw-w64-x86_64-meson
             mingw-w64-x86_64-autotools
             mingw-w64-x86_64-gcc
+            mingw-w64-x86_64-libyaml
             zip
 
 
@@ -64,9 +65,9 @@ jobs:
           mkdir build/artifact
           cd build/artifact
           cp /mingw64/bin/zlib1.dll .
-          cp ../../windows/build-mingw64/bin/x64-msvcrt-ruby310.dll .
-          cp -r ../../windows/build-mingw64/lib/ruby/3.1.0 .
-          mv ./3.1.0 ./stdlib
+          cp ../../windows/build-mingw64/bin/x64-msvcrt-ruby330.dll .
+          cp -r ../../windows/build-mingw64/lib/ruby/3.3.0 .
+          mv ./3.3.0 ./stdlib
           cp ../mkxp-z.exe .
           cp ../../mkxp.json .
           cp -r ../../scripts .
@@ -122,8 +123,8 @@ jobs:
       - name: Prepare archive
         run: |
           cd build/local
-          cp -r ../../linux/build-x86_64/lib/ruby/3.1.0 .
-          mv ./3.1.0 ./stdlib
+          cp -r ../../linux/build-x86_64/lib/ruby/3.3.0 .
+          mv ./3.3.0 ./stdlib
           cp ../../mkxp.json .
           cp -r ../../scripts .
           cp ../../assets/LICENSE.mkxp-z-with-https.txt .
@@ -233,8 +234,8 @@ jobs:
       - name: Prepare archive
         run: |
           cd build/local
-          cp -r ../../linux/build-${{matrix.arch_mkxpz}}/lib/ruby/3.1.0 .
-          mv ./3.1.0 ./stdlib
+          cp -r ../../linux/build-${{matrix.arch_mkxpz}}/lib/ruby/3.3.0 .
+          mv ./3.3.0 ./stdlib
           cp ../../mkxp.json .
           cp -r ../../scripts .
           cp ../../assets/LICENSE.mkxp-z-with-https.txt .
