--- a/.github/workflows/autobuild.yml
+++ b/.github/workflows/autobuild.yml
@@ -6,6 +6,7 @@ on:
     paths-ignore: ['*.md', '*.json', '*.png']
   pull_request:
     paths-ignore: ['*.md', '*.json', '*.png']
+  workflow_dispatch:
 
 jobs:
   build-windows:
