--- a/linux/Makefile
+++ b/linux/Makefile
@@ -15,8 +15,8 @@ LIBDIR := $(BUILD_PREFIX)/lib
 INCLUDEDIR := $(BUILD_PREFIX)/include
 DOWNLOADS := ${PWD}/downloads/$(ARCH)
 NPROC := $(shell nproc)
-CFLAGS := -I$(INCLUDEDIR) -flax-vector-conversions -Ofast $(ARCH_CFLAGS)
-LDFLAGS := -L$(LIBDIR) -Wl,-Ofast
+CFLAGS := -I$(INCLUDEDIR) -flax-vector-conversions $(ARCH_CFLAGS)
+LDFLAGS := -L$(LIBDIR)
 CC      ?= gcc
 PKG_CONFIG_LIBDIR := $(BUILD_PREFIX)/lib/pkgconfig
 GIT := git
